<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/image_ic_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/store_image"
            app:layout_constraintBottom_toBottomOf="@+id/cost_of_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cost_of_service"
            app:srcCompat="@drawable/ic_store" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_service"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:autofillHints="100"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toEndOf="@+id/image_ic_store"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:maxLength="12" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/image_ic_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/service_image"
            app:layout_constraintBottom_toBottomOf="@+id/service_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/service_question"
            app:srcCompat="@drawable/ic_service" />

        <TextView
            android:id="@+id/service_question"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/how_was_the_service"
            app:layout_constraintStart_toEndOf="@id/image_ic_service"
            app:layout_constraintTop_toBottomOf="@id/cost_of_service" />

        <RadioGroup
            android:id="@+id/tip_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/option_twenty_percent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/service_question"
            app:layout_constraintTop_toBottomOf="@id/service_question">

            <RadioButton
                android:id="@+id/option_twenty_percent"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_service" />

            <RadioButton
                android:id="@+id/option_fifteen_percent"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_service" />

            <RadioButton
                android:id="@+id/option_ten_percent"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_service" />

            <RadioButton
                android:id="@+id/option_custom"
                style="@style/Widget.TipTime.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_price" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/custom_price"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-39dp"
            android:layout_marginBottom="-5dp"
            android:autofillHints="25"
            android:hint="@string/custom_service"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/round_up_switch"
            app:layout_constraintStart_toEndOf="@+id/tip_options"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/custom_price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/image_ic_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/round_up_image"
            app:layout_constraintBottom_toBottomOf="@+id/round_up_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/round_up_switch"
            app:srcCompat="@drawable/ic_round_up" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            style="@style/Widget.TipTime.CompoundButton.Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:checked="true"
            android:text="@string/round_up_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_ic_round_up"
            app:layout_constraintTop_toBottomOf="@id/tip_options">

        </com.google.android.material.switchmaterial.SwitchMaterial>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/round_up_switch"
            app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

        <TextView
            android:id="@+id/tip_result"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tip_amount_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate_button"
            tools:text="Tip Amount: 0₴" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>